program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -1743,7 +1743,7 @@ msgstr "Définir &automatiquement le nom du fichier destination"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2244
 #, no-c-format
 msgid "&Boundary characters:"
-msgstr "Caractères de &découpe :"
+msgstr "Caractères de rec&herche :"
 
 #: src/mkvtoolnix-gui/forms/main_window/available_update_info_dialog.h:168
 #, no-c-format
@@ -6300,7 +6300,7 @@ msgstr "Accentuation :"
 #: src/common/hacks.cpp:64
 #, no-c-format
 msgid "Enable appending and splitting FLAC tracks."
-msgstr "Active la concaténation et le découpage des pistes FLAC."
+msgstr "Active la concaténation et la scission des pistes FLAC."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2259
 #, no-c-format
@@ -6390,12 +6390,12 @@ msgstr "Description de la tâche"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:861
 #, no-c-format
 msgid "Enter predefined split duration"
-msgstr "Saisir la durée de coupure prédéfinie"
+msgstr "Saisir la durée de scission prédéfinie"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:860
 #, no-c-format
 msgid "Enter predefined split size"
-msgstr "Saisir la taille de coupure prédéfinie"
+msgstr "Saisir la taille de scission prédéfinie"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:858
 #, no-c-format
@@ -7736,12 +7736,12 @@ msgstr "Les mêmes noms souvent utilisés pour les pistes peuvent être saisis i
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:384
 #, no-c-format
 msgid "If you often use the same values when splitting by duration, you can enter them here."
-msgstr "Si les mêmes valeurs de coupure par durée sont souvent utilisées, il est possible de les saisir ici."
+msgstr "Si les mêmes valeurs de scission par durée sont souvent utilisées, il est possible de les saisir ici."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:379
 #, no-c-format
 msgid "If you often use the same values when splitting by size, you can enter them here."
-msgstr "Si les mêmes valeurs de coupure par taille sont souvent utilisées, il est possible de les saisir ici."
+msgstr "Si les mêmes valeurs de scission par taille sont souvent utilisées, il est possible de les saisir ici."
 
 #: src/mkvtoolnix-gui/forms/merge/adding_appending_files_dialog.h:173
 #, no-c-format
@@ -8255,7 +8255,7 @@ msgstr "Cette option est ignorée pour les fichiers de chapitrage XML."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:420
 #, no-c-format
 msgid "It tries to detect sequences of names that likely belong to the same movie by splitting the name into three parts: a prefix, a running number and a suffix that doesn't contain digits."
-msgstr "Elle tente de détecter les séquences de noms qui appartiennent probablement au même film en découpant le nom en trois parties : un préfixe, un nombre et un suffixe qui ne contient pas de chiffre."
+msgstr "Elle tente de détecter les séquences de noms qui appartiennent probablement au même film en scindant le nom en trois parties : un préfixe, un nombre et un suffixe qui ne contient pas de chiffre."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:2162
 #, no-c-format
@@ -8894,7 +8894,7 @@ msgstr "Une modification des propriétés de la section « {0} » a été demand
 #: src/mkvtoolnix-gui/forms/info/tab.h:155
 #, no-c-format
 msgid "Modified:"
-msgstr ""
+msgstr "Modifié :"
 
 #: src/common/kax_element_names.cpp:271
 #, no-c-format
@@ -9994,12 +9994,12 @@ msgstr "Saisir une description pour la nouvelle tâche :"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:861
 #, no-c-format
 msgid "Please enter the new predefined split duration."
-msgstr "Merci de saisir la nouvelle durée de coupure prédéfinie."
+msgstr "Merci de saisir la nouvelle durée de scission prédéfinie."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:860
 #, no-c-format
 msgid "Please enter the new predefined split size."
-msgstr "Merci de saisir la nouvelle taille de coupure prédéfinie."
+msgstr "Merci de saisir la nouvelle taille de scission prédéfinie."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:858
 #, no-c-format
@@ -10095,12 +10095,12 @@ msgstr "Noms de pistes audio prédéfinis"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2223
 #, no-c-format
 msgid "Predefined split durations"
-msgstr "Durées de coupure prédéfinies"
+msgstr "Durées de scission prédéfinies"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2222
 #, no-c-format
 msgid "Predefined split sizes"
-msgstr "Tailles de coupure prédéfinies"
+msgstr "Tailles de scission prédéfinies"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2221
 #, no-c-format
@@ -11628,12 +11628,12 @@ msgstr "Scission"
 #: src/merge/output_control.cpp:1091
 #, no-c-format
 msgid "Splitting tracks of this type is not supported."
-msgstr "Le découpage de pistes de ce type n'est pas pris en charge."
+msgstr "La scission de pistes de ce type n'est pas pris en charge."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:336
 #, no-c-format
 msgid "Splitting will occur right before the first key frame whose timestamp is equal to or bigger than the start timestamp for the chapters whose numbers are listed."
-msgstr "La scission aura lieu juste avant la première trame-clé d'horodatage égal ou supérieur à celui de départ pour les chapitres dont les numéros sont listés."
+msgstr "La scission aura lieu juste avant la première trame clé d'horodatage égal ou supérieur à celui de départ pour les chapitres dont les numéros sont listés."
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:708
 #, no-c-format
@@ -13013,7 +13013,7 @@ msgstr "La ligne {0} du fichier d'horodatages « {1} » ne contient pas un nombr
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1395
 #, no-c-format
 msgid "The list of boundary characters for deriving the track language from file names must not be empty."
-msgstr "La liste de caractères de découpe pour déterminer la langue de piste depuis les noms de fichier ne peut pas être vide."
+msgstr "La liste des caractères de recherche pour déterminer la langue de piste depuis les noms de fichier ne peut pas être vide."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1407
 #, no-c-format
@@ -13527,7 +13527,7 @@ msgstr "La piste d'identifiant {0} n'a pas d'identifiant de codec valide.\n"
 #: src/merge/output_control.cpp:1093
 #, no-c-format
 msgid "The track ID {0} from the file '{1}' cannot be split. {2}\n"
-msgstr "La piste avec l'ID {0} du fichier « {1} » ne peut pas être découpée. {2}\n"
+msgstr "La piste avec l'ID {0} du fichier « {1} » ne peut pas être scindée. {2}\n"
 
 #: src/merge/output_control.cpp:675
 #, no-c-format
@@ -14137,7 +14137,7 @@ msgstr "Échelle d'horodatage"
 #: src/merge/cluster_helper.cpp:230
 #, no-c-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Horodatage utilisé pour la scission : {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2185
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2208
@@ -15252,7 +15252,7 @@ msgstr "Par concaténation : un chapitre est créé au début et un autre où le
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:493
 #, no-c-format
 msgid "When deriving the track language from the file name, the file name is split into parts on the characters in this list."
-msgstr "Lorsque le nom de fichier sert établir la langue de la piste, il est découpé en parties selon les caractères de cette liste."
+msgstr "Lorsque le nom de fichier sert établir la langue de la piste, il est scindé en parties selon les caractères de cette liste."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:367
 #, no-c-format
