--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (72.0.0-0~bunkus01) kinetic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 13 Nov 2022 12:54:41 +0100
+
 mkvtoolnix (71.1.0-0~bunkus01) jammy; urgency=low
 
   * New version.
