--- a/po/nl.po
+++ b/po/nl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-11-02 19:48+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: rctgamer3 <rctgamer3+transifex@hotmail.com>, 2021\n"
+"Last-Translator: CamielK, 2022\n"
 "Language-Team: \n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -1990,9 +1990,9 @@ msgid "&Hidden"
 msgstr "&Verborgen"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:386
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Individually selected components"
-msgstr "Aanz&etten geselecteerde bijlage"
+msgstr "&Individueel geselecteerde componenten"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:671
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:765
@@ -2203,12 +2203,12 @@ msgstr "Vorige samenvoeg instelingen"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:390
 #, no-c-format
 msgid "&Private use:"
-msgstr ""
+msgstr "&Privé gebruik:"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:387
 #, no-c-format
 msgid "&Region:"
-msgstr ""
+msgstr "&Regio:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:647
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:668
@@ -2311,9 +2311,9 @@ msgid "&Scan for other playlists"
 msgstr "&Scan voor andere afspeellijsten"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:394
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Script:"
-msgstr "&Beschrijving:"
+msgstr "&Script:"
 
 #: src/mkvtoolnix-gui/merge/attachments.cpp:447
 #, no-c-format
@@ -2404,7 +2404,7 @@ msgstr "&Valideer waarden"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:389
 #, no-c-format
 msgid "&Variants:"
-msgstr ""
+msgstr "&Varianten:"
 
 #: src/mkvtoolnix-gui/forms/info/job_settings_widget.h:162
 #, no-c-format
@@ -3399,7 +3399,7 @@ msgstr "Voeg bestan&den en extra delen toe"
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:756
 #, no-c-format
 msgid "Add files from clip&board"
-msgstr ""
+msgstr "Voeg bestanden van klem&bord toe"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:1473
 #, no-c-format
@@ -3437,9 +3437,9 @@ msgid "Add new ed&ition after"
 msgstr "Voeg een nieuwe ed&itie toe na"
 
 #: src/mkvtoolnix-gui/main_window/prefs_language_shortcut_dialog.cpp:28
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Add new language shortcut"
-msgstr "&Talen:"
+msgstr "Voeg nieuwe taal snelkoppeling toe"
 
 #: src/propedit/propedit_cli_parser.cpp:255
 #, no-c-format
@@ -4220,7 +4220,7 @@ msgstr " Blu-ray afspeellijst bestanden"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2274
 #, no-c-format
 msgid "Blu-rays"
-msgstr ""
+msgstr "Blu-rays"
 
 #: src/common/property_element.cpp:190
 #, no-c-format
@@ -6443,9 +6443,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "Fout bij ontleden van markeringen '{0}': sommige verplichte elementen ontbreken.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:939
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Instellingen bestand laadt fout"
+msgstr "Fout met spelen geluid"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:205
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -6556,9 +6556,9 @@ msgid "Exception details:"
 msgstr "Uitzonderingsdetails:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2262
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Exceptions"
-msgstr "Uitzonderingsdetails:"
+msgstr "Uitzonderingen"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1294
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:315
@@ -6712,12 +6712,12 @@ msgstr "FLV (Flash video)"
 #: src/common/audio_emphasis.cpp:53
 #, no-c-format
 msgid "FM radio in Europe"
-msgstr ""
+msgstr "FM radio in Europa"
 
 #: src/common/audio_emphasis.cpp:54
 #, no-c-format
 msgid "FM radio in the USA"
-msgstr ""
+msgstr "FM radio in de Verenigde Staten"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:273
 #, no-c-format
@@ -7782,9 +7782,9 @@ msgid "Indexing (cues):"
 msgstr "Indexering (cues):"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:890
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Individually selected components"
-msgstr "Aanz&etten geselecteerde bijlage"
+msgstr "Individueel geselecteerde componenten"
 
 #: src/mkvtoolnix-gui/jobs/info_job.cpp:135
 #, no-c-format
@@ -7804,9 +7804,9 @@ msgid "Information"
 msgstr "Iinformatie"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:397
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Iinformatie"
+msgstr "Informatie & Waarschuwingen:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -8368,14 +8368,14 @@ msgstr "Taal:"
 
 #: src/mkvtoolnix-gui/chapter_editor/name_model.cpp:28
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:263
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Languages"
-msgstr "&Talen:"
+msgstr "Talen"
 
 #: src/mkvtoolnix-gui/forms/chapter_editor/tab.h:534
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Languages:"
-msgstr "Taal:"
+msgstr "Talen:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2164
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2208
@@ -8460,12 +8460,12 @@ msgstr "Lijst alle geldige eigenschap namen en sluit af."
 #: src/mkvtoolnix-gui/main_window/available_update_info_dialog.cpp:143
 #, no-c-format
 msgid "Listen to <a href=\"%1\">song</a> on YouTube"
-msgstr ""
+msgstr "Luister naar <a href=\"%1\">song</a>op YouTube"
 
 #: src/mkvtoolnix-gui/main_window/available_update_info_dialog.cpp:138
 #, no-c-format
 msgid "Listen to <a href=\"%1\">song</a> or <a href=\"%2\">album</a> on YouTube"
-msgstr ""
+msgstr "Luister naar <a href=\"%1\">song</a> of <a href=\"%2\">album</a> op YouTube"
 
 #: src/mkvtoolnix-gui/gui_cli_parser.cpp:51
 #, no-c-format
@@ -8541,9 +8541,9 @@ msgid "MKVToolNix GUI's installation directory"
 msgstr "MKVToolNix GUI's installatie map"
 
 #: src/mkvtoolnix-gui/main_window/available_update_info_dialog.cpp:62
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "MKVToolNix news & changes"
-msgstr "MKVToolNix GUI configuratie bestanden"
+msgstr "MKVToolNix nieuws & veranderingen"
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:122
 #: src/mkvtoolnix-gui/merge/tab.cpp:219
@@ -9442,7 +9442,7 @@ msgstr "Opmerking: De video inhoud wordt niet gewijzigd door deze optie."
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:213
 #, no-c-format
 msgid "Note:"
-msgstr ""
+msgstr "Opmerking:"
 
 #: src/extract/mkvextract.cpp:165
 #: src/propedit/options.cpp:37
@@ -9459,7 +9459,7 @@ msgstr "Aantal te creëren ingaven:"
 #: src/common/stereo_mode.cpp:102
 #, no-c-format
 msgid "Number"
-msgstr ""
+msgstr "Nummer"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2156
 #, fuzzy, no-c-format
@@ -9940,9 +9940,9 @@ msgid "Playlist items:"
 msgstr "Afspeellijst items:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:270
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Playlists & Blu-rays"
-msgstr "Afspeellijsten"
+msgstr "Afspeellijsten & Blu-rays"
 
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:58
 #, no-c-format
@@ -10053,9 +10053,9 @@ msgid "Pre&viously used destination directory"
 msgstr "&Voorgaande gebruikte doel map"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Predefined audio track names"
-msgstr "Voorgedefinieerde spoornamen"
+msgstr "Voorgedefinieerde audio spoor namen"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2223
 #, no-c-format
@@ -10068,19 +10068,19 @@ msgid "Predefined split sizes"
 msgstr "Voorgedefinieerde gesplitste maten"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Predefined subtitle track names"
-msgstr "Voorgedefinieerde spoornamen"
+msgstr "Voorgedefinieerde ondertitel spoor namen"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:265
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Predefined values"
-msgstr "Voorgedefinieerde gesplitste maten"
+msgstr "Voorgedefinieerde waardes"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Predefined video track names"
-msgstr "Voorgedefinieerde spoornamen"
+msgstr "Voorgedefinieerde video spoor namen"
 
 #: src/common/kax_element_names.cpp:94
 #: src/common/property_element.cpp:121
@@ -10111,7 +10111,7 @@ msgstr "Privégegevens die alleen van toepassing zijn op een specifieke projecti
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:219
 #, no-c-format
 msgid "Private use"
-msgstr ""
+msgstr "Privé gebruik"
 
 #: src/output/p_prores.h:26
 #, no-c-format
@@ -10188,9 +10188,9 @@ msgid "Projection type"
 msgstr "Projectie type"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2241
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Projectie type"
+msgstr "Projectie type:"
 
 #: src/common/kax_element_names.cpp:144
 #, no-c-format
@@ -10507,7 +10507,7 @@ msgstr "Virtuele referentie"
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:217
 #, no-c-format
 msgid "Region"
-msgstr ""
+msgstr "Regio"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:168
 #, no-c-format
@@ -10939,7 +10939,7 @@ msgstr "Bereik"
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:216
 #, no-c-format
 msgid "Script"
-msgstr ""
+msgstr "Script"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:104
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:116
@@ -11103,9 +11103,9 @@ msgid "Select executable"
 msgstr "Selecteer programma"
 
 #: src/mkvtoolnix-gui/util/file_dialog.cpp:125
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Select existing file"
-msgstr "Selecteer markeringsbestand"
+msgstr "Selecteer bestaand bestand"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:302
 #, no-c-format
@@ -11113,9 +11113,9 @@ msgid "Select file to add"
 msgstr "Selecteer toe te voegen bestand"
 
 #: src/mkvtoolnix-gui/forms/merge/select_playlist_dialog.h:303
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Select one or more playlists to add"
-msgstr "Selecteer toe te voegen bestand"
+msgstr "Selecteer een of meerdere afspeellijsten om toe te voegen"
 
 #: src/mkvtoolnix-gui/merge/output.cpp:471
 #, no-c-format
@@ -12320,12 +12320,12 @@ msgstr "De gegevens in het bestand zijn beschadigd en kunnen niet veilig worden 
 #: src/mkvtoolnix-gui/header_editor/time_value_page.cpp:92
 #, no-c-format
 msgid "The date & time shown is in UTC."
-msgstr ""
+msgstr "De datum & tijd is weergegeven in UTC."
 
 #: src/mkvtoolnix-gui/header_editor/time_value_page.cpp:92
 #, no-c-format
 msgid "The date & time shown is in your local time zone."
-msgstr ""
+msgstr "De datum & tijd is weergegeven in je lokale tijdszone."
 
 #: src/common/property_element.cpp:119
 #, no-c-format
@@ -12446,7 +12446,7 @@ msgstr "De landen die hier wordt gekozen, zal bovenaan worden getoond in de land
 #: src/output/p_avc_hevc_es.cpp:98
 #, no-c-format
 msgid "The error message was:"
-msgstr ""
+msgstr "De foutmelding was:"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:451
 #, fuzzy, no-c-format
@@ -14723,7 +14723,7 @@ msgstr "Variabelen voor samenvoeg taken"
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:218
 #, no-c-format
 msgid "Variants"
-msgstr ""
+msgstr "Varianten"
 
 #: src/mkvtoolnix-gui/main_window/available_update_info_dialog.cpp:120
 #, no-c-format
@@ -15554,7 +15554,7 @@ msgstr "ac3_bs_packetizer::add_to_buffer(): Niet geteste code ('grootte' is vree
 #: src/common/kax_info.cpp:863
 #, no-c-format
 msgid "advertisement"
-msgstr ""
+msgstr "advertentie"
 
 #: src/common/stereo_mode.cpp:60
 #, no-c-format
@@ -15811,9 +15811,9 @@ msgid "key, "
 msgstr "sleutel, "
 
 #: src/merge/mkvmerge.cpp:1428
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "language"
-msgstr "Taal"
+msgstr "taal"
 
 #: src/common/kax_info.cpp:629
 #, fuzzy, no-c-format
@@ -16163,7 +16163,7 @@ msgstr "geen fout"
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:24
 #, no-c-format
 msgid "no language selected"
-msgstr ""
+msgstr "geen taal geselecteerd"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:900
 #, fuzzy, no-c-format
