AUTHORS: add Dutch translator Camiel K

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,9 @@ Ben Humpert <ben@an3k.de>
 Burak Yavuz <bourock@live.com>
     * Turkish translation
 
+Camiel K <?@?>
+    * Dutch translation
+
 Chao Chen <tochenchao@gmail.com>
     * Support colour elements for video tracks
     * Support reading colour elements from "COLR" atoms in MP4 files
