--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (73.0.0-0~bunkus01) kinetic; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Mon, 02 Jan 2023 19:28:42 +0100
+
 mkvtoolnix (72.0.0-0~bunkus01) kinetic; urgency=low
 
   * New version.
