program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2022\n"
+"Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2023\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
 "language/ca/)\n"
 "Language: ca\n"
@@ -7721,9 +7721,9 @@ msgid "If this hack is enabled, the code will leave the parameter sets as they a
 msgstr "Si està habilitat aquest truc, el codi deixarà els conjunts de paràmetres com estan."
 
 #: src/common/hacks.cpp:69
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this hack is enabled, they won't be removed."
-msgstr "Si està habilitat aquest truc, el codi deixarà els conjunts de paràmetres com estan."
+msgstr "Si aquest pirateig està habilitat, no s'eliminaran."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
 #, no-c-format
@@ -8326,9 +8326,9 @@ msgid "Job &output"
 msgstr "S&ortida de la tasca"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job completed with warnings"
-msgstr "S'ha completat amb avisos"
+msgstr "Tasca finalitzada amb avisos"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8341,9 +8341,9 @@ msgid "Job end date && time in ISO 8601 format"
 msgstr "Data i hora de finalització de la tasca en format ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job failed"
-msgstr "Ha fallat"
+msgstr "La tasca ha fallat"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8359,9 +8359,9 @@ msgid "Job queue"
 msgstr "Cua de treball"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job queue changed"
-msgstr "Cua de treball"
+msgstr "La cua de tasques ha canviat"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8369,9 +8369,9 @@ msgid "Job start date && time in ISO 8601 format"
 msgstr "Data i hora d'inici de la tasca en format ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job succeeded"
-msgstr "Cua de treball"
+msgstr "Tasca realitzada amb èxit"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -9446,7 +9446,7 @@ msgstr "Normalment, les entrades seleccionades a la vista de llista es poden mou
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr ""
+msgstr "Normalment, els espais i les tabulacions s'eliminen del principi i del final de cada línia en els subtítols de text."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -11410,9 +11410,9 @@ msgstr "Mostra una línia de re&sum amb les estadístiques de cada pista al fina
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:197
 #: src/mkvtoolnix-gui/util/settings.cpp:314
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show a desktop notification"
-msgstr "Mostra informació sobre la versió."
+msgstr "Mostra una notificació d'escriptori"
 
 #: src/info/info_cli_parser.cpp:44
 #, no-c-format
@@ -13003,7 +13003,7 @@ msgstr "La tasca ha estat afegida a la cua de treball."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "S'ha acabat de processar la cua de tasques."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
