program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-01-15 19:19+0100\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2022\n"
+"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2023\n"
 "Language-Team: French (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -7674,9 +7674,9 @@ msgid "If this hack is enabled, the code will leave the parameter sets as they a
 msgstr "Si ceci est activé, le programme laissera les paramètres tels quels."
 
 #: src/common/hacks.cpp:69
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this hack is enabled, they won't be removed."
-msgstr "Si ceci est activé, le programme laissera les paramètres tels quels."
+msgstr "Si ceci est activé, elles ne seront pas retirées."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:538
 #, no-c-format
@@ -8279,9 +8279,9 @@ msgid "Job &output"
 msgstr "Rapp&ort de tâche"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:91
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job completed with warnings"
-msgstr "Terminée avec avertissement(s)"
+msgstr "Tâche terminée avec avertissements"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:243
 #, no-c-format
@@ -8294,9 +8294,9 @@ msgid "Job end date && time in ISO 8601 format"
 msgstr "Date et heure de fin de tâche en format ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:92
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job failed"
-msgstr "Échoué"
+msgstr "Tâche échouée"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:273
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:431
@@ -8312,9 +8312,9 @@ msgid "Job queue"
 msgstr "File d'attente"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:120
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job queue changed"
-msgstr "File d'attente"
+msgstr "File d'attente modifiée"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:244
 #, no-c-format
@@ -8322,9 +8322,9 @@ msgid "Job start date && time in ISO 8601 format"
 msgstr "Date et heure de départ de tâche en format ISO 8601"
 
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:90
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Job succeeded"
-msgstr "File d'attente"
+msgstr "Tâche réussie"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:242
 #, no-c-format
@@ -9400,7 +9400,7 @@ msgstr "Les sélections de la liste peuvent être normalement déplacées par gl
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr ""
+msgstr "Les espaces et les tabulations sont normalement retirées au début et à la fin de chaque ligne de texte des sous-titres."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -11371,9 +11371,9 @@ msgstr "Afficher une ligne de ré&sumé à la fin avec des statistiques pour cha
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:197
 #: src/mkvtoolnix-gui/util/settings.cpp:314
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Show a desktop notification"
-msgstr "Afficher les informations de version."
+msgstr "Afficher une notification sur le Bureau"
 
 #: src/info/info_cli_parser.cpp:44
 #, no-c-format
@@ -12974,7 +12974,7 @@ msgstr "La tâche a été ajoutée à la file d'attente."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "Le traitement de la file d'attente est terminé."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, no-c-format
